<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">旧书阁</string>

    //SplashActivity
    <string name="text_begin_use">开始使用</string>

    //MainActivity
    <string name="text_index">首页</string>
    <string name="text_category">分类</string>
    <string name="text_cart">购物车</string>
    <string name="text_usercenter">我的</string>

    //IndexFragment
    <string name="text_default_school_name">武汉科技大学(黄家湖校区)</string>
    <string name="text_search_hint">搜索书名/作者/ISBN/专业</string>
    <string name="text_index_rank_one">热销榜</string>
    <string name="text_index_rank_two">热销榜</string>
    <string name="text_index_rank_three">热销榜</string>
    <string name="text_index_rank_four">热销榜</string>
    <string name="text_index_rank_five">热销榜</string>
    <string name="text_index_on_sale">今日特价</string>

    //CartFragment
    <string name="text_sum_money">合计：</string>
    <string name="text_rbm">¥</string>
    <string name="text_go_to_pay">去结算(0)</string>
    <string name="text_select_all">" 全选"</string>
    <string name="text_cart_empty_hint_two">小主，快去买点东西吧^_^</string>
    <string name="text_cart_empty_hint_one">购物车竟然是空的</string>


    //SearchActivity
    <string name="text_hot_search">热门搜索</string>
    <string name="text_recently_search">最近搜索</string>

    //loginActivity
    <string name="text_login">登录</string>
    <string name="text_phone_quickly_login">手机号快捷登录</string>
    <string name="text_account_password_login">账号密码登录</string>
    <string name="text_account_hint">请输入手机号</string>
    <string name="text_password_hint">请输入密码</string>
    <string name="text_login_account">账号</string>
    <string name="text_login_password">密码</string>
    <string name="text_phone_num">手机号</string>
    <string name="text_phone_num_hint">仅支持中国大陆手机号</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_code">验证码</string>
    <string name="text_code_hint">6位短信验证码</string>
    <string name="text_register_hint">未注册的手机号码验证后自动创建账户</string>

    //BookDeatilActivity
    <string name="text_book_detail">书籍详情</string>

    //AdDetailActivity
    <string name="text_activity_detail">活动详情</string>


</resources>
