<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_theme_selected_color"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cart"
            android:textColor="@color/app_theme_color_light"
            android:textSize="20dp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_empty_cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/text_cart_empty_hint_one"
                android:textColor="@color/app_theme_text_color_primary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_cart_empty_hint_two" />

        </LinearLayout>


        <ListView
            android:id="@+id/lv_cart_book_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </ListView>

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:background="@color/app_theme_line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp">


            <CheckBox
                android:id="@+id/cb_check_all"
                style="@style/CheckBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_select_all" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sum_money"
                    android:textColor="@color/app_theme_text_color_primary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_rbm"
                    android:textColor="@color/app_theme_selected_color" />

                <TextView
                    android:id="@+id/tv_tatol_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="20dp"
                    android:text="0"
                    android:textColor="@color/app_theme_selected_color" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_go_to_pay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/app_theme_selected_color"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/text_go_to_pay"
                android:textColor="@color/app_theme_color_light"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
