<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_width"
        android:background="@color/app_theme_line_color"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/indicator_height"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_index"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_index"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/selector_bg_guide_index"/>

            <TextView
                android:id="@+id/tv_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_index"
                android:textColor="@drawable/selector_text_color"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_category"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_category"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/selector_bg_guide_category"/>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_category"
                android:textColor="@drawable/selector_text_color"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cart"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_cart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/selector_bg_guide_cart"/>

            <TextView
                android:id="@+id/tv_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cart"
                android:textColor="@drawable/selector_text_color"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_usercenter"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_usercenter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/selector_bg_guide_usercenter"/>

            <TextView
                android:id="@+id/tv_usercenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_usercenter"
                android:textColor="@drawable/selector_text_color"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>